Implement Action Bar menu items.

--- a/SmartLampSample/res/layout/fragment_music_visualization.xml
+++ b/SmartLampSample/res/layout/fragment_music_visualization.xml
@@ -4,79 +4,10 @@
              android:background="@drawable/bg">
 
 
-  <HorizontalScrollView
+  <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:id="@+id/horizontalScrollView"
+      android:id="@+id/circle"
       android:layout_gravity="center"
-      android:scrollbars="none"
-      android:overScrollMode="never">
-
-    <LinearLayout
-        android:id="@+id/horizontal_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-      <!--<ImageView-->
-          <!--android:layout_width="wrap_content"-->
-          <!--android:layout_height="wrap_content"-->
-          <!--android:padding="10dp"-->
-          <!--android:src="@drawable/alarm_bg_icon"/>-->
-
-    </LinearLayout>
-
-  </HorizontalScrollView>
-
+      android:src="@drawable/circle"/>
 </FrameLayout>
