--- a/SmartLampSample/res/layout/fragment_motion_control.xml
+++ b/SmartLampSample/res/layout/fragment_motion_control.xml
@@ -3,236 +3,78 @@
              android:layout_height="match_parent"
              android:background="@drawable/bg">
 
-  <RelativeLayout
-      android:id="@+id/custom_view_container"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content">
-
-    <com.gergelydezso.smartlampsdk.sampleapp.motioncontrol.LampMotion
-        android:id="@+id/lamp_motion"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <ImageView
-        android:id="@+id/imageView_coordinate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:alpha="80"
-        android:padding="10dp"
-        android:visibility="invisible"
-        android:src="@drawable/coordinate_syztem"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/lamp_motion"
-        android:orientation="vertical">
-
-      <ImageView
-          android:id="@+id/header_line"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_alignParentLeft="true"
-          android:paddingLeft="35dp"
-          android:paddingRight="35dp"
-          android:paddingBottom="8dp"
-          android:src="@drawable/alarm_line"/>
-
-      <!--<LinearLayout-->
-      <!--android:layout_width="wrap_content"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:orientation="horizontal"-->
-      <!--android:paddingBottom="10dp"-->
-      <!--android:gravity="center"-->
-      <!--android:layout_gravity="center_horizontal">-->
-
-      <!--<ImageView-->
-      <!--android:id="@+id/header_line"-->
-      <!--android:layout_width="170dp"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:layout_alignParentLeft="true"-->
-      <!--android:paddingLeft="15dp"-->
-      <!--android:paddingRight="15dp"-->
-      <!--android:paddingBottom="8dp"-->
-      <!--android:layout_gravity="center"-->
-      <!--android:src="@drawable/alarm_line"/>-->
-
-      <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
-      <!--&lt;!&ndash;android:id="@+id/header_line"&ndash;&gt;-->
-      <!--&lt;!&ndash;android:layout_width="20dp"&ndash;&gt;-->
-      <!--&lt;!&ndash;android:layout_height="20dp"&ndash;&gt;-->
-      <!--&lt;!&ndash;android:src="@drawable/alarm_bg_icon"/>&ndash;&gt;-->
-
-      <!--<ImageView-->
-      <!--android:id="@+id/header_line"-->
-      <!--android:layout_width="170dp"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:layout_alignParentLeft="true"-->
-      <!--android:paddingLeft="15dp"-->
-      <!--android:paddingRight="15dp"-->
-      <!--android:paddingBottom="8dp"-->
-      <!--android:layout_gravity="center"-->
-      <!--android:src="@drawable/alarm_line"/>-->
-
-      <!--</LinearLayout>-->
-
-      <!--<LinearLayout-->
-      <!--android:layout_width="match_parent"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:orientation="horizontal"-->
-      <!--android:gravity="center_horizontal"-->
-      <!--android:paddingBottom="8dp">-->
-
-      <!--<SeekBar-->
-      <!--android:id="@+id/seekBar_part0"-->
-      <!--android:layout_width="320dp"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:layout_gravity="center_horizontal"-->
-      <!--android:max="180"-->
-      <!--android:progress="90"-->
-      <!--android:indeterminate="false"/>-->
-      <!--</LinearLayout>-->
-
-      <!--<LinearLayout-->
-      <!--android:layout_width="match_parent"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:orientation="horizontal"-->
-      <!--android:gravity="center_horizontal"-->
-      <!--android:paddingBottom="8dp">-->
-
-      <!--<SeekBar-->
-      <!--android:id="@+id/seekBar_part4"-->
-      <!--android:layout_width="320dp"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:layout_gravity="center_horizontal|right"-->
-      <!--android:max="180"-->
-      <!--android:progress="90"-->
-      <!--android:indeterminate="false"/>-->
-      <!--</LinearLayout>-->
-
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_horizontal"
-
-          android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/base"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_weight="1"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/motion_control"/>
-
-        <ImageView
-            android:id="@+id/lamp_head_control"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_weight="1"
-            android:layout_alignParentLeft="true"
-            android:src="@drawable/motion_control"/>
-
-      </LinearLayout>
-
-
-      <ImageView
-          android:id="@+id/header_line"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_alignParentLeft="true"
-          android:paddingTop="8dp"
-          android:paddingLeft="35dp"
-          android:paddingRight="35dp"
-          android:paddingBottom="8dp"
-          android:src="@drawable/alarm_line"/>
-
-      <!--<LinearLayout-->
-      <!--android:layout_width="wrap_content"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:orientation="horizontal"-->
-      <!--android:layout_gravity="center_horizontal">-->
-
-      <!--<ImageView-->
-      <!--android:id="@+id/header_line"-->
-      <!--android:layout_width="170dp"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:layout_alignParentLeft="true"-->
-      <!--android:paddingLeft="15dp"-->
-      <!--android:paddingRight="15dp"-->
-      <!--android:paddingBottom="8dp"-->
-      <!--android:src="@drawable/alarm_line"/>-->
-
-      <!--<ImageView-->
-      <!--android:id="@+id/header_line"-->
-      <!--android:layout_width="170dp"-->
-      <!--android:layout_height="wrap_content"-->
-      <!--android:layout_alignParentLeft="true"-->
-      <!--android:paddingLeft="15dp"-->
-      <!--android:paddingRight="15dp"-->
-      <!--android:paddingBottom="8dp"-->
-      <!--android:src="@drawable/alarm_line"/>-->
-
-      <!--</LinearLayout>-->
-
-      <HorizontalScrollView
-          android:paddingTop="25dp"
-          android:paddingLeft="15dp"
-          android:paddingRight="15dp"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:id="@+id/horizontalScrollView"
-          android:layout_gravity="center"
-          android:scrollbars="none">
-
-        <LinearLayout
-            android:id="@+id/horizontal_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        </LinearLayout>
-
-      </HorizontalScrollView>
-
-
-    </LinearLayout>
-  </RelativeLayout>
-
   <AbsoluteLayout
+      android:id="@+id/absolute_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-
-
     <ImageView
-        android:id="@+id/parttt0"
+        android:id="@+id/image_lamp_arm2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/part1"
-        android:layout_x="215px"
-        android:layout_y="215px"/>
+        android:src="@drawable/part0_2"
+        android:rotation="45"
+        android:transformPivotX="15px"
+        android:transformPivotY="200px"
+        android:layout_x="194px"
+        android:layout_y="159px"/>
 
     <ImageView
-        android:id="@+id/lamp_head_image"
+        android:id="@+id/image_lamp_arm1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/part0_2"
+        android:rotation="-45"
+        android:transformPivotX="15px"
+        android:transformPivotY="200px"
+        android:layout_x="335px"
+        android:layout_y="300px"/>
+
+    <ImageView
+        android:id="@+id/image_lamp_head"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/lamp_headd"
-        android:layout_x="178dp"
-        android:layout_y="94dp"/>
+        android:transformPivotX="0px"
+        android:transformPivotY="30px"
+        android:layout_x="350px"
+        android:layout_y="189px"/>
 
 
     <ImageView
-        android:id="@+id/parttt00"
+        android:id="@+id/image_lamp_base"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/part0"
-        android:layout_x="102dp"
-        android:layout_y="178dp"/>
+        android:src="@drawable/base"
+        android:layout_x="278px"
+        android:layout_y="500px"/>
+
+    <ImageView
+        android:id="@+id/image_lamp_head_control"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/head_control"
+        android:layout_x="438px"
+        android:layout_y="660px"/>
+
+    <ImageView
+        android:id="@+id/image_lamp_base"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arms_control_base"
+        android:layout_x="161px"
+        android:layout_y="677px"/>
+
+    <ImageView
+        android:id="@+id/image_lamp_base_control"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/arms_control"
+        android:rotation="90"
+        android:transformPivotX="27px"
+        android:transformPivotY="133px"
+        android:layout_x="183px"
+        android:layout_y="595px"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -253,6 +95,45 @@
         android:textColor="@color/green"
         android:id="@+id/textView2" android:layout_x="189dp" android:layout_y="242dp"/>
   </AbsoluteLayout>
+
+
+  <RelativeLayout
+      android:id="@+id/custom_view_container"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent">
+
+
+    <ImageView
+        android:id="@+id/imageView_coordinate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:alpha="80"
+        android:padding="10dp"
+        android:visibility="invisible"
+        android:src="@drawable/coordinate_syztem"/>
+
+
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/horizontalScrollView"
+        android:layout_gravity="center"
+        android:scrollbars="none"
+        android:layout_alignParentBottom="true">
+
+      <LinearLayout
+          android:id="@+id/horizontal_layout"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
+      </LinearLayout>
+
+    </HorizontalScrollView>
+
+
+  </RelativeLayout>
 
 
   <ImageView
