--- a/SmartLampSample/res/layout/activity_navigate.xml
+++ b/SmartLampSample/res/layout/activity_navigate.xml
@@ -8,14 +8,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+
     <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
-        android:divider="@drawable/header_line"
-        android:dividerHeight="1dp" />
+            android:id="@+id/left_drawer"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="#111"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp" />
+
+
 
 </android.support.v4.widget.DrawerLayout>
