--- a/SmartLampSample/res/layout/fragment_notifications.xml
+++ b/SmartLampSample/res/layout/fragment_notifications.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -19,7 +18,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:scaleType="fitXY"
-        android:src="@drawable/lamp1" />
+        android:src="@drawable/bg" />
 
     <LinearLayout
         android:id="@+id/notifications_layout"
