--- a/SmartLampSample/res/layout/ns_menu_row_counter.xml
+++ b/SmartLampSample/res/layout/ns_menu_row_counter.xml
@@ -25,7 +25,7 @@
                 android:layout_toRightOf="@+id/menurow_icon"
                 android:layout_centerVertical="true"
                 android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                android:textColor="#fff" />
+                android:textColor="#acacac" />
         <TextView
             android:id="@+id/menurow_counter"
             android:layout_width="32dp"
@@ -35,6 +35,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/rectangle"
             android:gravity="center"
+            android:layout_centerVertical="true"
             android:minHeight="?android:attr/listPreferredItemHeightSmall"
             android:padding="6dp"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
