--- a/SmartLampSample/res/menu/main.xml
+++ b/SmartLampSample/res/menu/main.xml
@@ -1,22 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <item
-      android:id="@+id/action_settings"
-      android:orderInCategory="100"
-      android:showAsAction="never"
-      android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_settings" />
 
-  <item
-      android:id="@+id/menu_save"
-      android:icon="@drawable/content_save"
-      android:showAsAction="ifRoom|withText"
-      android:title="save"/>
-
-  <item
-      android:id="@+id/menu_play"
-      android:icon="@drawable/av_play"
-      android:showAsAction="ifRoom|withText"
-      android:title="play"/>
+    <item
+        android:id="@+id/menu_save"
+        android:showAsAction="ifRoom|withText"
+        android:title="SAVE"></item>
+    <!--android:icon="@drawable/content_save"-->
 
 
 </menu>
